stirling-pdf/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stirlingpdf
  namespace: homelab
  labels:
    name: stirlingpdf
    role: egress-allow
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      name: stirlingpdf
  template:
    metadata:
      labels:
        name: stirlingpdf
        role: egress-allow
    spec:
      securityContext:
        # runAsUser: 1000
        # runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: stirlingpdf # https://github.com/stirlingpdf/stirlingpdf
          image: "docker.stirlingpdf.com/stirlingtools/stirling-pdf:latest-ultra" # 
          resources:
            limits:
              memory: "500Mi"
              cpu: "500m"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          volumeMounts:
            - mountPath: /usr/share/tessdata
              name: data
              subPath: tessdata
            - mountPath: /configs
              name: data
              subPath: configs
            - mountPath: /customFiles/
              name: data
              subPath: customFiles
            - mountPath: /logs/
              name: data
              subPath: logs
            - mountPath: /pipeline/
              name: data
              subPath: pipeline
          securityContext:
            allowPrivilegeEscalation: false
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: stirlingpdf-local-data-pvc
