stirling-pdf/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stirling-pdf-ing
  namespace: homelab
  labels:
    name: stirling-pdf
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: stirling-pdf-svc
                port:
                  number: 8096
